--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App {
   text-align: center;
+
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 100%;
   pointer-events: none;
 }
 
@@ -14,14 +15,21 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-color: #282c34;
+  height: 10vh;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-body{
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;  
 }
 
 .App-link {
